# caminos-lib

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  clippy.toml
src/: config.rs  config_parser.rs  config_parser.rsg  error.rs  event.rs  experiments.rs  lib.rs  matrix.rs  measures.rs  output.rs  packet.rs  pattern.rs  policies.rs  quantify.rs  traffic.rs
src/allocator/: islip.rs  label_reduction.rs  mod.rs  random.rs  random_priority.rs
src/defaults/: main.cfg  main.od
src/pattern/: extra.rs  mod.rs  operations.rs  probabilistic.rs  transformations.rs
src/router/: basic.rs  basic_modular.rs  input_output.rs  input_output_monocycle.rs  mod.rs
src/routing/: basic.rs  channel_operations.rs  extra.rs  mod.rs  polarized.rs  updown.rs
src/topology/: cartesian.rs  dragonfly.rs  megafly.rs  mod.rs  multistage.rs  neighbourslists.rs  operations.rs  projective.rs  slimfly.rs
src/traffic/: basic.rs  collectives.rs  mini_apps.rs  mod.rs  operations.rs  sequences.rs
tests/: basic_router_test.rs  extra_routing_test.rs  frequency_division_test.rs  input_output_test.rs  megafly_routing_test.rs  traffic_test.rs
tests/common/: mod.rs
