[package]
name = "caminos-lib"
version = "0.6.3"
authors = ["Cristóbal Camarero <cristobal.camarero@unican.es>"]
# Daniel Postigo and Alejandro Cano have contributed.
edition = "2018"
description = "A modular interconnection network simulator."
publish = true
keywords = ["simulator"]
documentation = "https://docs.rs/caminos-lib"
readme = "README.md"
license = "MIT/Apache-2.0"
#repositry = ""
#categories = ["", ""]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[dependencies]

#Parsing the configuration grammar.
gramatica = "0.2.1"
#gramatica = { path = "../../../tutorials/rust/gramatica" }

#Generate random numbers.
rand = "0.8"

#Process command line options.
getopts = "0.2"

#Formatting current time.
chrono = "0.4"

#Accessing remote hosts.
ssh2 = "0.9"

#Ask password by terminal.
rpassword = "6.0"

#Asking other queries to the terminal's user.
rprompt = "1.0"

#For the progress bar.
indicatif = "0.16"

# Get the ticks per second to interpretate user and system time correctly.
procfs = "0.12"

# At some point this was somehow not automatically added by indicatif but were required.
#lazy_static = "1.4.0"
#lazy_static = { version="1.4.0", optional= true }

# Make diffs between files. To show inconsistencies of the configuration files in remote hosts.
diff = "0.1.12"

# Get the home directory. To find the ssh public key.
dirs = "4.0"

quantifiable-derive = "0.1.0"
#quantifiable-derive = { path = "../quantifiable-derive" }

# For allocations of specific sizes.
slab = { version= "0.4.7", optional = true }

#itertools used for details in cartesian routing GENERALTURN
itertools = "0.11.0"

#To treat with the payload of the messages in AsMessage trait.
bytemuck = "1.16.1"

[features]
#default = ["rc_packet"]
#rc_packet = []

default = []
#default = ["raw_packet"]
raw_packet =[]
slab_packet = ["slab"]

